tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__PalladiumProcess-AAAAAAAAAAAAAAAAAAAI_w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2303,
  "prerequisites": [
    1696
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Palladium is a rather useful Platinum Group Metal, necessary to make all machines in LuV.\n\nThis questline will help you figure out how to process it properly.\n\nFirst, process some of your Palladium Enriched Ammonia to Palladium Salt Dust.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lPalladium Processing",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "UNLOCKED"
  },
  "required_prerequisites": [
    1696
  ],
  "rewards": [],
  "tasks": []
}
