tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__Polybenzimidazol-AAAAAAAAAAAAAAAAAAAGmw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1691,
  "prerequisites": [
    1696
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Polybenzimidazole or PBI is a synthetic fiber needed in ZPM Hulls and in high tier solar panels, and can also be used to make some other items more efficiently. It has many steps to produce it. Let's start with chlorobenzene, but keep in mind you'll need to complete the other non-platline IV-tier chemical quests too.\n\n§6Already automated PBI? Hold 256 sheets to skip this questline.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lPolybenzimidazole",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "UNLOCKED"
  },
  "required_prerequisites": [
    1696
  ],
  "rewards": [],
  "tasks": []
}
