tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__Polybenzimidazol-AAAAAAAAAAAAAAAAAAAGoQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1697,
  "prerequisites": [
    1698,
    1695
  ],
  "properties": {
    "auto_claim": false,
    "desc": "3,3 Diaminobenzidine and Diphenyl Isophtalate will finally give you molten Polybenzimidazole. Use a plate mold to get plates.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lPolybenzimidazole, Finally!",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "CHAIN"
  },
  "required_prerequisites": [
    1698,
    1695
  ],
  "rewards": [],
  "tasks": []
}
