tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__PotassiumNitrate-AAAAAAAAAAAAAAAAAAAGpw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1703,
  "prerequisites": [
    1696
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Potassium Nitrate is made from Potassium and Nitric Acid.\nIf you have some saltpeter you can use that instead.\n\nPotassium nitrate can only be crafted while saltpeter has many different sources.\nPick the one you prefer, only one is needed to complete the quest.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lPotassium Nitrate",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "UNLOCKED"
  },
  "required_prerequisites": [
    1696
  ],
  "rewards": [],
  "tasks": []
}
