tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__QBitWaferandChip-AAAAAAAAAAAAAAAAAAAGjw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1679,
  "prerequisites": [
    1249,
    1669
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Qbit Wafer is made out of a Nano CPU Wafer and either Quantum Eyes and Gallium Arsenide, or IGP and Radon. Cut it for Qbit processor chips.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lQBit Wafer and Chip",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1249,
    1669
  ],
  "rewards": [],
  "tasks": []
}
