tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__QuantumMainframe-AAAAAAAAAAAAAAAAAAAGqw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1707,
  "prerequisites": [
    1706
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Quantum Mainframe is the first ZPM circuit you can make.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lQuantum Mainframe",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1706
  ],
  "rewards": [],
  "tasks": []
}
